Let mixins be defined in mods.toml instead